# distributed-testing-system

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml  install.sh
.github/workflows/: Dockerfile  build-data-base.env  build.yml  create_tables.sql  shared-libs.txt
build_data_base/: Dockerfile
configs/: tabasco.cfg  tabasco_test.cfg  testing_processor.cfg
env/: Dockerfile  install.sh  login.sh
executor/: CMakeLists.txt  Dockerfile  a.out  executor  executor.cpp  executor.h  main.cpp  test.cpp  test.txt
task_batcher_storage_coordinator/: CMakeLists.txt  README.md
task_batcher_storage_coordinator/common/: CMakeLists.txt
task_batcher_storage_coordinator/common/build_data_base/: CMakeLists.txt  Dockerfile  build_data_base.cpp  build_data_base.h  data_repr.cpp  data_repr.h
task_batcher_storage_coordinator/common/build_data_base/test/: CMakeLists.txt  test.cpp
task_batcher_storage_coordinator/common/proto/: CMakeLists.txt  batch.proto  build_data_base.proto  storage_client.proto  tabasco_config.proto
task_batcher_storage_coordinator/common/storage_client/: CMakeLists.txt  data_repr.cpp  data_repr.h  storage_client.cpp  storage_client.h
task_batcher_storage_coordinator/common/storage_client/impl/: CMakeLists.txt  storage_client_impl.cpp  storage_client_impl.h
task_batcher_storage_coordinator/common/storage_client/test/: CMakeLists.txt  test.cpp
task_batcher_storage_coordinator/grpc/: CMakeLists.txt  Dockerfile  main.cpp  server.cpp  server.h
task_batcher_storage_coordinator/grpc/proto/: CMakeLists.txt  tabasco_grpc.proto
task_batcher_storage_coordinator/http/: CMakeLists.txt  Dockerfile  handler_callbacks.cpp  handler_callbacks.h  load_tests_handler.cpp  load_tests_handler.h  load_tests_request_parser.h  main.cpp  parse_json.cpp  parse_json.h  server.cpp  server.h
task_batcher_storage_coordinator/http/handlers/: build_handler.cpp  build_handler.h  builds_handler.cpp  builds_handler.h  create_build_handler.cpp  create_build_handler.h  execute_scripts_handler.cpp  execute_scripts_handler.h  init_scripts_handler.cpp  init_scripts_handler.h  update_build_handler.cpp  update_build_handler.h  upload_build_handler.cpp  upload_build_handler.h  upload_execute_script_handler.cpp  upload_execute_script_handler.h  upload_init_script_handler.cpp  upload_init_script_handler.h  upload_task_root_dir.cpp  upload_task_root_dir.h  upload_tests_handler.cpp  upload_tests_handler.h
task_batcher_storage_coordinator/test/: CMakeLists.txt  Dockerfile  Makefile  requirements.txt  test_sample.py
task_batcher_storage_coordinator/test/data/: CMakeLists.txt  main.cpp
testing_processor/: CMakeLists.txt  Dockerfile  brocker_client.cpp  brocker_client.h  broker_client.cpp  broker_client.h  commit_service_request.cpp  commit_service_request.h  docker.container.cpp  docker_container.cpp  docker_container.h  main.cpp  tabasco_request_task.cpp  tabasco_request_task.h  testing_processor.cpp  testing_processor.h  testing_processor_request.h  testing_report.cpp  testing_report.h
testing_processor/proto/: CMakeLists.txt  brocker_client.proto  broker_client.proto  docker_container.proto  testing_processor_config.proto
tg_bot/: bot.py  config.yaml
userver/: Dockerfile  requirements.txt  server.py
userver/lib/: authlib.py  tabasco_client.py  testing_processor_client.py
userver/lib/db/: auth.py  challenges.py  helpers.py  session.py  solutions.py  tasks.py
utils/: CMakeLists.txt  execv_args.h  expected.h  lru_cache.h  parse_json.cpp  parse_json.h  utils.h
